# ladder-climber

./: .dockerignore  Dockerfile  README.md
app/: .gitignore  CMakeLists.txt  README.md
app/src/: Barrel.hpp  DonkeyKong.cpp  DonkeyKong.hpp  Game.cpp  Game.hpp  Platform.cpp  Platform.hpp  Player.cpp  Player.hpp
app/src/control/: GameController.cpp  GameController.hpp
app/src/model/: Barrel.cpp  Barrel.hpp  Coin.cpp  Coin.hpp  DonkeyKong.cpp  DonkeyKong.hpp  GameState.cpp  GameState.hpp  Platform.cpp  Platform.hpp  Player.cpp  Player.hpp  PowerUp.cpp  PowerUp.hpp
app/src/view/: GameView.cpp  GameView.hpp
app/test/: BarrelTest.cpp  CoinTest.cpp  DonkeyKongTest.cpp  GameStateTest.cpp  PlatformTest.cpp  PlayerTest.cpp  PowerUpTest.cpp
app/tools/: gen_sprites.cpp
